[package]
name = "zarrs_ffi"
description = "FFI bindings for the zarrs crate"
version = "0.5.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LDeakin/zarrs_ffi"
keywords = ["zarr"]
categories = ["encoding"]

[features]
cbindgen = []

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dev-dependencies]
inline-c = "0.1.7"
tempfile = "3.10.1"

[build-dependencies]
cbindgen = "0.26"

[dependencies]
ffi-support = "0.4.4"
once_cell = "1.18.0"
zarrs = { version = "0.12.5" }

# [patch.crates-io]
# zarrs = { path = "../zarrs" }
