[package]
name = "zarrs_ffi"
description = "FFI bindings for the zarrs crate"
version = "0.8.5"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LDeakin/zarrs_ffi"
keywords = ["zarr"]
categories = ["encoding"]

[features]
cbindgen = ["dep:cbindgen"]
all_codecs = ["zarrs/zstd", "zarrs/bitround","zarrs/zfp","zarrs/bz2","zarrs/pcodec","zarrs/gdeflate"] # Enable non-default zarrs codecs (including experimental codecs)

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dev-dependencies]
inline-c = "0.1.7"
tempfile = "3.10.1"

[build-dependencies]
cbindgen = { version = "0.27", optional = true }

[dependencies]
ffi-support = "0.4.4"
once_cell = "1.18.0"
serde_json = "1.0.71"
zarrs = "0.19.0"

# [patch.crates-io]
# zarrs = { path = "../zarrs" }
# zarrs = { git = "https://github.com/LDeakin/zarrs.git" }
